# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.648 2008-05-09 13:21:49 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

CVS HEAD (????/??/??)
 - (2008/05/09) Added service <-> sla multi relation support.
 - (2008/05/09) Fixed bug# 2448 - Not necessary unique check of SLA name.
 - (2008/05/07) Renamed/cleanup of all config setting names for QueueView,
    StatusView and LockedTickets.
 - (2008/05/07) Improved use of existing unique-names in xml definition of
    scripts/database/otrs-schema.xml (not longer auto generated).
 - (2008/05/07) Improved oracle database backend, generation of long
    index/koreign key names, moved from NUMBER to NUMBER(12,0).
 - (2008/05/07) Added some new database indexes to increase the database
    speed (for more info see scripts/DBUpdate*.sql).
 - (2008/05/07) Added article index support to increase speed of full text
    search up to 50% (need to be configured via SysConfig and
    bin/otrs.RebuildFulltextIndex.pl need to be executed after backend change).
 - (2008/05/07) Added ticket event support for TicketWatch*() in
    Kernel::System::Ticket. Fixed not removed ticket watch infos after deleting
    a ticket.
 - (2008/05/07) Improved speed of ticket search screen on large installation,
    added cache for database lookup to get all unique ticket free text fields
    (tooks up to 10 sek, on lage installations).
 - (2008/05/02) Deleted textarea wrap in perl code and set browser wrap in dtl files.
 - (2007/04/29) Added X-OTRS-TicketTime and X-OTRS-FollowUp-TicketTime email
    header support as additional attributes like already existing X-OTRS-Header
    (for more info see doc/X-OTRS-Headers.txt).
 - (2007/04/29) Added Format attribute (default html, optional plain) for "Intro*"