@@ -152,7 +152,7 @@ TimeWorkingHours
 
 -->
 <otrs_config version="1.0" init="Application">
-    <CVS>$Id: Ticket.xml,v 1.176 2008-05-08 22:02:48 martin Exp $</CVS>
+    <CVS>$Id: Ticket.xml,v 1.177 2008-05-15 09:31:45 martin Exp $</CVS>
     <ConfigItem Name="Ticket::Hook" Required="1" Valid="1">
         <Description Lang="en">The identifier for a ticket, e.g. Ticket#, Call#, MyTicket#. The default is Ticket#.</Description>
         <Description Lang="de">Ticket-Identifikator, z. B. Ticket#,Call#, MyTicket#. Als Standard wird Ticket# verwendet.</Description>
@@ -6136,8 +6136,8 @@ $QData{"Signature"}
         <Setting>
             <Hash>
                 <Item Key="Module">Kernel::System::Ticket::CustomerPermission::CustomerUserIDCheck</Item>
-                <Item Key="Required">1</Item>
-                <Item Key="Granted">0</Item>
+                <Item Key="Required">0</Item>
+                <Item Key="Granted">1</Item>
             </Hash>
         </Setting>
     </ConfigItem>
@@ -6149,8 +6149,8 @@ $QData{"Signature"}
         <Setting>
             <Hash>
                 <Item Key="Module">Kernel::System::Ticket::CustomerPermission::CustomerIDCheck</Item>
-                <Item Key="Required">1</Item>
-                <Item Key="Granted">0</Item>
+                <Item Key="Required">0</Item>
+                <Item Key="Granted">1</Item>
             </Hash>
         </Setting>
     </ConfigItem>
