@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.648 2008-05-09 13:21:49 mh Exp $
+# $Id: CHANGES,v 1.649 2008-05-15 09:31:45 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -272,6 +272,8 @@ CVS HEAD (????/??/??)
  - (2007/09/13) Improved report overview of perfornance log.
 
 2.2.7 (2008/??/??)
+ - (2008/05/15) Fixed bug# 2870 - Customer-Frontend: No Access to Company Tickets
+    (CustomerIDCheck fails).
  - (2008/05/09) Added new catalonian language translation. Thanks to Antonio Linde!
  - (2008/05/08) Fixed bug# 2683 - $QData{"OrigFrom"} in Reply leads to wrong
     quote in email answer if sender is agent (To of origin email is used).
